feat(package.json): add endpoint urls to package
The urls for changelog, documentation and licenses have now been
added to the default package.json as these can be used in the
package manager.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "io.extendreality.tilia.{scope}.{feature}.{platform?}",
     "displayName": "Tilia {scope}.{feature}.{platform?}",
     "description": "{Description of feature.}",
+    "changelogUrl": "https://github.com/ExtendRealityLtd/Tilia.{scope}.{feature}.{platform?}/blob/master/CHANGELOG.md",
+    "documentationUrl": "https://github.com/ExtendRealityLtd/Tilia.{scope}.{feature}.{platform?}/tree/master/Documentation",
+    "licensesUrl": "https://github.com/ExtendRealityLtd/Tilia.CameraRigs.{scope}.{feature}.{platform?}/blob/master/LICENSE.md",
     "version": "1.0.0",
     "unity": "2018.3",
     "unityRelease": "10f1",
